# HLRcompress

./: CMakeLists.txt  README.md
cmake/: FindTBB.cmake  FindZFP.cmake
example/: CMakeLists.txt  compress.cc  h5compress.cc  hlrcompress.cc  logmatrix.cc
hlrcompress/: CMakeLists.txt  compress.hh  compress_cuda.hh  config.h  config.h.in
hlrcompress/approx/: aca.hh  accuracy.hh  randsvd.hh  rrqr.hh  svd.hh
hlrcompress/blas/: arith.hh  blas_def.hh  matrix.hh  matrix_base.hh  matrix_view.hh  memblock.hh  range.hh  vector.hh  vector_base.hh
hlrcompress/hlr/: block.hh  dense_block.hh  error.hh  indexset.hh  lowrank_block.hh  structured_block.hh
hlrcompress/misc/: compression.hh  error.hh  tensor.hh  type_traits.hh
libpressio/: CMakeLists.txt  LibPressioHLRCompressConfig.cmake.in  libpressio_hlrcompress.cc
libpressio/include/: libpressio-hlrcompress.h
