add_library(HLRcompress INTERFACE)

set(HLRCOMPRESS_INSTALL_INCLUDEDIR "${CMAKE_INSTALL_INCLUDEDIR}/hlrcompress")

target_include_directories(HLRcompress
  INTERFACE 
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
  $<INSTALL_INTERFACE:${HLRCOMPRESS_INSTALL_INCLUDEDIR}>
  )

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/approx DESTINATION ${HLRCOMPRESS_INSTALL_INCLUDEDIR})
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/blas DESTINATION ${HLRCOMPRESS_INSTALL_INCLUDEDIR})
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/hlr DESTINATION ${HLRCOMPRESS_INSTALL_INCLUDEDIR})
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/misc DESTINATION ${HLRCOMPRESS_INSTALL_INCLUDEDIR})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/compress.hh DESTINATION ${HLRCOMPRESS_INSTALL_INCLUDEDIR})
